Date
2008/05/14
	* Fixed a bug with reset position leting a jailed person to get out, reported by panchox
	at ea boards (and thanks for the temporary fix, brianlew, we really appreciated it) [Dekamaster]

------------------
We are retaking the project today (2008/05/14), we'll be slowly adding new stuffs to the control
panel and fixing old bugs, if you have a bug to report you are welcome to share it with us at
cerescp@gmail.com (yes we are reading it again)
------------------

2007/01/01
	* Fixed Firefox incompatibility, stupid browser [BeoWulf]

2006/12/03
	* Reviewed img.php and middle.php files with help of gunawan wibisono [BeoWulf]

2006/10/23
	* Added a variable in recover.php [BeoWulf]

2006/10/18
	* Fixed an exploit in language.php [BeoWulf]

2006/10/15
	* Added a one day ipban to users blocked, it will keep then out to think about
	what they did and can't creat accounts with ofensive nicks against GMs. [BeoWulf]
	* Small fix in server_status.php, and a change in account.php so now its
	post not get (internal stuff). [BeoWulf]

2006/10/03
	* Fixed errors in emblems.php, adminquery.php, ladder.php and functions.php. [BeoWulf]

2006/10/03
	* Changed all session maybe now there is no conflict with 2 cps in same machine. [BeoWulf]

2006/09/22
	* Added some fuzzy to code image. [BeoWulf]

2006/09/18
	* Created first trial of an install script. [BeoWulf]
	* Fixed install script checks and w3c instructions. [BeoWulf]
	* Changed INSTALL.TXT instructions to fit the new install script. [BeoWulf]

2006/09/18
	* Added jail check to position.php so jailed characters may not reset
		their position. [Entwined]
	* Added Post functions do ajax engine. [BeoWulf]
	* Changed login.php from get to post. [BeoWulf]
	* Fixed whoisonline.php adjust to show position to minimum admin level set 
		in config.php. [BeoWulf]
	* Added check in functions.php to destroy session if you use more than one
		CP in same machine when changing beteween them use different names 